# anu

./: .gitattributes  .gitignore  README.md  anu - presentation.key  index.html  main.js  notes.md  options.json  package-lock.json  package.json  sc-osc-example.scd  server.js  todo.md
.github/workflows/: release.yml
pkg-scripts/: index.js
scripts/: move-binary.js
src/: index.html  main.js
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/analyser/: lexer.rs  parser.rs  token.rs
src-tauri/src/lib/: conf.rs  midi.rs  mod.rs  osc.rs  setup.rs
src-tauri/src/osc/: mod.rs
src/links/: fonts.css  main.css  style.css
src/media/ai/: diagram.ai
src/modules/: canvas.js  commander.js  console.js  const.js  displayer.js  io.js  io.midi.js  io.udp.js  metronome.js  seequencer.js  stepcursor.js
src/modules/lib/: utils.js
src/scripts/: Seeq.js  canvas.js  client.js  clock.js  commander.js  console.js  const.js  content.js  cursor.js  data.js  displayer.js  highlighter.js  init.js  io.js  io.midi.js  io.osc.js  io.udp.js  karnpapon.js  keyboard.js  keys.js  layout.js  library.js  loading.js  marker.js  metronome.js  metronomeworker.js  midi.js  midiclock.js  regex-worker.js  regex.js  seequencer.js  seq.js  sequencer.js  source.js  stepcounter.js  stepcursor.js  terminal.js  timer.js  utils.js
src/scripts/lib/: _null.js  theme.js  utils.js
src/scripts/obsoleted/: keys.js  layout.js  sequencer.js
src/scripts/unused/: keys.js  layout.js  sequencer.js
