[package]
name = "anu-tauri"
version = "0.1.0"
description = "A anu application built with Tauri"
authors = ["you"]
license = ""
repository = ""
default-run = "anu-tauri"
edition = "2021"
rust-version = "1.59"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }

[dependencies]
serde_json = "1.0"
rosc = "0.8.1"
midir = "0.9.1"
nom = "7.1.1"
nom_locate = "4.0.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2.4", features = ["macos-private-api", "window-close", "window-hide", "window-maximize", "window-minimize", "window-set-min-size", "window-show", "window-start-dragging", "window-unmaximize", "window-unminimize"] }
tauri-plugin-window-state = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "dev" }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
