[package]
name = "anu-tauri"
version = "0.1.0"
description = "anu application built with Tauri"
authors = ["karnpapon <karnpapon@gmail.com>"]
license = "MIT"
repository = "https://github.com/karnpapon/anu"
default-run = "anu-tauri"
edition = "2021"
rust-version = "1.59"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.3", features = [] }

[dependencies]
serde_json = "1.0"
rosc = "0.8.1"
midir = "0.9.1"
nom = "7.1.1"
log = "0.4.17"
anyhow = "1.0.66"
nom_locate = "4.0.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.3.0", features = ["macos-private-api", "window-close", "window-hide", "window-maximize", "window-minimize", "window-set-min-size", "window-show", "window-start-dragging", "window-unmaximize", "window-unminimize"] }
tauri-plugin-window-state = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "dev" }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]


[profile.release]
panic = "abort" # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true # Enables link to optimizations
opt-level = "z" # Optimize for binary size
strip = true # Remove debug symbols
